--- a/views/crm_lead_view.xml
+++ b/views/crm_lead_view.xml
@@ -55,7 +55,7 @@
 		<record id="crm_inherit_form" model="ir.ui.view">
 			<field name="name">Crm Lead</field>
 			<field name="model">crm.lead</field>
-			<field name="inherit_id" ref="crm.crm_case_form_view_leads" />
+			<field name="inherit_id" ref="crm.crm_lead_view_form" />
 			<field name="arch" type="xml">
 			<div name="button_box" position="inside">
 				<button class="oe_stat_button" type="action" name="%(action_view_task_id)d"
@@ -69,29 +69,6 @@
 				</button>
 			</field>
 		</record>
-
-
-
-
-        <record id="crm_inherit_form" model="ir.ui.view">
-            <field name="name">Crm Lead</field>
-            <field name="model">crm.lead</field>
-            <field name="inherit_id" ref="crm.crm_case_form_view_oppor" />
-            <field name="arch" type="xml">
-            <div name="button_box" position="inside">
-                <button class="oe_stat_button" type="action" name="%(action_view_task_id)d"
-                        context="{'default_partner_id': partner_id }"
-                        icon="fa-tasks">
-                        <field  string="Tasks" name="task_number" widget="statinfo"/>
-                    </button>
-                  </div>
-                <button name="action_set_won_rainbowman" position="after">
-                    <button name="%(action_view_crm_task_form)d" string="Create Task" type="action"/>
-                </button>
-            </field>
-        </record>
-
-        
 	</data>
 </openerp>
         
